src/test/resources/tokens/invalid/float_out_of_bounds.unpick
unpick v3
group float
    3.4028236E38f